[package]
name = "qrcode-cli"
version = "0.1.0"
edition = "2021"
description = "QRCode CLI"
authors = ["Keisuke Toyota<hm.pudding0715@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seahorse = "2"
qrcode = "0.13"
image = "0.24"
bardecoder = "0.5"
